google analytics implemented

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,22 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Blomkvist - UX & Front-end Development</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159829577-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-159829577-1');
+    </script>
+
+    <title>Blomkvist - UX & Frontend Development</title>
 
   </head>
   
   <body>
 
-    <!-- Div for content -->
     <div id="root"></div>
 
     <!-- Bootstrap  -->
