--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159829577-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -19,7 +19,7 @@
 
       gtag('config', 'UA-159829577-1');
     </script>
-
+     -->
     <title>Blomkvist - UX & Frontend Development</title>
 
   </head>
